--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="color-scheme" content="light" />
 	<link rel="stylesheet" href="pico.purple.css" />
+	<link rel="stylesheet" href="noarrow.css" />
   
   <title>아레뜨 예술가 등록 신청</title>
 </head>
