--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="color-scheme" content="light" />
-	<link rel="stylesheet" href="css/pico.purple.css" />
+	<link rel="stylesheet" href="CSS/pico.purple.css" />
   <link rel="stylesheet" href="CSS/noarrow.css"/>
   
   <title>아레뜨 예술가 등록 신청</title>
